tests/baselines/reference/exportAssignValueAndType.errors.txt
exportAssignValueAndType.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== exportAssignValueAndType.ts (1 errors) ====
    declare module http {
                   ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	export interface Server { openPort: number; }
    }
    
    interface server {
        (): http.Server;
        startTime: Date;
    }
     
    var x = 5;
    var server = new Date();
    export = server;
     
    